--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     networks:
       - app_network
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/sisdb2025
-      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql_sisdb2025:3306/sisdb2025
+      SPRING_DATASOURCE_USERNAME: rootEspe
       SPRING_DATASOURCE_PASSWORD: root
 
 volumes:
