--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 server.port=8002
 
 #Configuracion de la base de datos
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/sisdb2025
+spring.datasource.url=jdbc:mysql://mysql_sisdb2025:3306/sisdb2025
 spring.datasource.username=rootEspe
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
